--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 			<div class="buffer col-12 " ></div>
 
 
-			<section class="text-center col-12 my-3" tabindex="-1">
+			<section class="text-center col-12 my-3" >
 				
 				<hr>
+			<a href="https://forms.gle/bT3waLvVTXb9omJH7">
 				<button class="btn btn-primary btn-xl"  >Find out more</button>
-
+			</a>	
 			</section>
 			
 
