--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section class="text-center col-12 my-3" >
 				
 				<hr>
-			<a href="https://forms.gle/FcYfsTStHARqSRLu8">
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdJ_T0wcsKjekpOhb-V387veLt5V7ATqXpH2j6nDjZTWlbCYQ/viewform?usp=sf_link">
 				<button class="btn btn-primary btn-xl"  >Find out more</button>
 			</a>	
 			</section>
